--- a/package.json
+++ b/package.json
@@ -4,12 +4,29 @@
   "description": "Remove DI for angular, support ES6 modules",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "eslint ."
   },
   "repository": {
     "type": "git",
-    "url": "git@github.paypal.com:nfra/angular-webpack-remove-di-loaders.git"
+    "url": "git://github.com/krakenjs/angular-remove-di-loaders.git"
   },
-  "author": "dbrain",
-  "license": "MIT"
+  "keywords": [
+    "angular",
+    "dependency injection",
+    "injection",
+    "webpack",
+    "loader",
+    "krakenjs",
+    "kraken"
+  ],
+  "licenses": [
+    {
+      "type": "Apache 2.0",
+      "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+    }
+  ],
+  "readmeFilename": "README.md",
+  "devDependencies": {
+    "eslint": "^2.10.2"
+  }
 }
